--- a/tools/install
+++ b/tools/install
@@ -2,7 +2,7 @@
 echo "Installing dependencies ..."
 pip install -r wildcamera-api/requirements.txt
 echo "Installing the service"
-cp wild.service /etc/systemd/system/wild.service
+cp tools/wild.service /etc/systemd/system/wild.service
 service enable wild
 service wild start
 echo "Running ..."
